test/positive/feature_callstaticmethods.java

public class feature_callstaticmethods {
  public feature_callstaticmethods() {}
  public void m2() {
    java.lang.System.exit();
  }
}

