test/negative/ImplementInterfaceRepeated/A.java
import B.B;
public class A implements B, B {
    public A() {}
}
